[package]
name = "chowder"
version = "0.1.0"
edition = "2021"
authors = ["w3irdrobot <w3irdrobot@proton.me>"]
description = "A terminal frontend for Bisq"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23.2"
prost = "0.10.3"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }
tonic = "0.7.2"
tui = "0.18.0"

[build-dependencies]
tonic-build = "0.7.2"
